--- a/example.env
+++ b/example.env
@@ -1,4 +1,5 @@
 NODE_ENV = development
 PORT = 5000
 MONGO_URI = add your mongo uri
-JWT_SECRET = create a password or pin. 
+JWT_SECRET = create a password or pin
+PAYPAL_CLIENT_ID= paste in your paypal client ID
